Updated background color

--- a/src/style.css
+++ b/src/style.css
@@ -1,5 +1,5 @@
 body {
-  background: linear-gradient(179.4deg, #fce4de 2.2%, #e18a5f 96.2%);
+  background: linear-gradient(179.4deg, #e18a5f 2.2%, #fce4de 96.2%);
   background-size: cover;
   height: 100vh;
   display: block;
