--- a/src/style.css
+++ b/src/style.css
@@ -89,18 +89,23 @@ header {
 }
 
 .weather-forecast {
-  margin-top: 20px;
-  color: #000;
+  margin: 20px 20px;
+  color: #bb624f;
+  display: flex;
+  justify-content: space-between;
   text-align: center;
 }
-
+.row {
+  background-color: #fce4de;
+  padding: 20px;
+  border-radius: 8px;
+}
 .weather-forecast-date {
   font-size: 16px;
-  opacity: 0.5;
   font-weight: bold;
 }
 .weather-forecast-temperature-min {
-  opacity: 0.5;
+  opacity: 0.8;
 }
 .weather-forecast-temperature {
   font-size: 13;
