--- a/src/style.css
+++ b/src/style.css
@@ -27,6 +27,9 @@ header {
   padding-bottom: 20px;
 }
 
+.search-form {
+  display: flex;
+}
 .search-form-input,
 .search-form-button {
   padding: 15px 25px;
@@ -35,8 +38,13 @@ header {
   font-size: 16px;
 }
 .search-form-input {
-  background-color: #fce4de;
-  width: 75%;
+  background: linear-gradient(
+    87.4deg,
+    #fce4de 1.9%,
+    #ffdedc 49.7%,
+    #ffd4cf 100.5%
+  );
+  width: 100%;
 }
 .search-form-button {
   background-color: #e18a5f;
@@ -96,8 +104,14 @@ header {
   text-align: center;
 }
 .row {
-  background-color: #fce4de;
+  background: linear-gradient(
+    87.4deg,
+    #fce4de 1.9%,
+    #ffdedc 49.7%,
+    #ffd4cf 100.5%
+  );
   padding: 20px;
+  width: 65px;
   border-radius: 8px;
   justify-content: center;
 }
@@ -107,6 +121,9 @@ header {
 }
 .weather-forecast-icon {
   justify-content: center;
+  width: 55px;
+  display: block;
+  margin: 0 auto;
 }
 .weather-forecast-temperature-min {
   opacity: 0.8;
@@ -125,4 +142,50 @@ footer {
 a {
   color: #bb624f;
   font-weight: 500;
+}
+
+@media screen and (max-width: 655px) {
+  .weather-forecast {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    gap: 10px;
+  }
+  .row {
+    width: unset;
+  }
+}
+
+@media screen and (max-width: 449px) {
+  .weather-app-data {
+    display: block;
+  }
+  .weather-app-data:first-child {
+    text-align: center;
+  }
+  .weather-app-temperature-container {
+    justify-content: center;
+  }
+  .weather-forecast {
+    grid-template-columns: 1fr 1fr;
+  }
+  body {
+    overflow: unset;
+  }
+}
+
+@media screen and (max-width: 300px) {
+  .row {
+    padding: 15px;
+  }
+  .search-form {
+    display: block;
+  }
+  .search-form-button {
+    margin-left: 0;
+    margin-top: 5px;
+    width: 100%;
+  }
+  .weather-forecast {
+    gap: 5px;
+  }
 }
